fix header vertical alignment

--- a/app/assets/stylesheets/shared/datatables.scss
+++ b/app/assets/stylesheets/shared/datatables.scss
@@ -29,6 +29,7 @@
         box-shadow: 3px 5px 10px 0px rgba(82, 63, 105, 0.08);
         position: sticky !important;
         top: 0;
+        vertical-align: middle;
 
         &:last-of-type{
           clip-path: inset(0px 0px -20px -1px);
